Fixed not jumping to top

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  margin: 2rem 20% 3rem 15%;
+  padding: 2rem 14% 3rem 12%;
   background-color: lightgray;
 }
 
